<resources>
    <string name="app_name">Books controller</string>
    <string name="sum">sum</string>
    <string name="no_reviews">No reviews yet</string>
    <string name="all_reviews_of">All reviews of</string>
    <string name="reviews">reviews</string>
    <string name="notAvailable">Not available</string>
    <string name="available">Available</string>
    <string name="error">Error!</string>
    <string name="add_category">Add category</string>
    <string name="category_name">Category name</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="rent_price">Rent price</string>
    <string name="selling_price">Selling price</string>
    <string name="add_book">Add book</string>
    <string name="choose">Choose</string>
    <string name="name">Name</string>
    <string name="author_name">Author name</string>
    <string name="count">Count</string>
    <string name="language">Language</string>
    <string name="alphabet_type">Alphabet type</string>
    <string name="pages_count">Pages count</string>
    <string name="coating_type">Coating type</string>
    <string name="manufacturing_company">Manufacturing company</string>
    <string name="more_information">More information</string>
    <string name="search_books">Search books</string>
    <string name="social_media">Social media</string>
    <string name="phone_number">Phone number</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="instagram" translatable="false">Instagram</string>
    <string name="terms_of_trade">Terms of trade</string>
    <string name="admin" translatable="false">Admin</string>
    <string name="write_a_review">Write an answer</string>
    <string name="kelajak_book" translatable="false">Kelajak book</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="edit_book">Edit book</string>
    <string name="please_fill_in_all_the_boxes">Please fill in all the boxes!</string>
    <string name="please_choose_a_picture">Please choose a picture!</string>
    <string name="successfully_saved">Successfully saved!</string>
    <string name="please_enter_a_category_name">Please enter a category name!</string>
    <string name="category_all">All</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="uzbek">Uzbek</string>
</resources>