<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AddBookFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/main_color" />

        <TextView
            android:id="@+id/labelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_book"
            android:textColor="@color/main_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/toReviews"
            android:layout_width="30dp"
            android:visibility="gone"
            android:layout_height="30dp"
            android:src="@drawable/contact_us"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            app:tint="@color/main_color" />

    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bookImage"
                android:layout_width="130dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_outline_add_photo_alternate_24" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/chooseImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:drawableEnd="@drawable/ic_baseline_attach_file_24"
                android:gravity="center"
                android:text="@string/choose"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/bookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/search_edit_text_backgraund"
                android:hint="@string/name"
                android:padding="16dp" />

            <EditText
                android:id="@+id/bookAuthorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/search_edit_text_backgraund"
                android:hint="@string/author_name"
                android:padding="16dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <Spinner
                    android:id="@+id/categorySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/search_edit_text_backgraund"
                    tools:listitem="@layout/category_spinner_item_layout" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                    app:tint="@color/main_color" />

            </FrameLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white"
                android:text="@string/add_category"
                android:textColor="@color/main_color"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="12dp"
                app:strokeColor="@color/main_color"
                app:strokeWidth="2dp" />

            <EditText
                android:id="@+id/bookCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/search_edit_text_backgraund"
                android:hint="@string/count"
                android:inputType="number"
                android:padding="16dp" />

            <EditText
                android:id="@+id/bookLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/search_edit_text_backgraund"
                android:hint="@string/language"
                android:padding="16dp" />

            <EditText
                android:id="@+id/bookAlphabetType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/search_edit_text_backgraund"
                android:hint="@string/alphabet_type"
                android:padding="16dp" />

            <EditText
                android:id="@+id/bookPagesCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/search_edit_text_backgraund"
                android:hint="@string/pages_count"
                android:inputType="number"
                android:padding="16dp" />

            <EditText
                android:id="@+id/bookCoatingType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/search_edit_text_backgraund"
                android:hint="@string/coating_type"
                android:padding="16dp" />

            <EditText
                android:id="@+id/bookManufacturingCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/search_edit_text_backgraund"
                android:hint="@string/manufacturing_company"
                android:padding="16dp" />

            <EditText
                android:id="@+id/bookMoreInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/search_edit_text_backgraund"
                android:hint="@string/more_information"
                android:padding="16dp" />

            <EditText
                android:id="@+id/bookRentPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/search_edit_text_backgraund"
                android:hint="@string/rent_price"
                android:padding="16dp" />

            <EditText
                android:id="@+id/bookSellingPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/search_edit_text_backgraund"
                android:hint="@string/selling_price"
                android:padding="16dp" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <ProgressBar
                    android:id="@+id/saveProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp" />

            </FrameLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>